# BME-Phonebook

./: CMakeLists.txt  String.cpp  String.h  address.h  contact.h  contact.hpp  directory.cpp  directory.h  list.hpp  main.cpp  memtrace.h  name.h  phone.h  string.cpp  string.h
Documents/: ClassDiagram.uxf  Dokumentáció.docx  ~$kumentáció.docx
Libs/: gtest_lite.h  memtrace.h
Managers/: String.cpp  String.h  address.h  contact.cpp  contact.h  directory.cpp  directory.h  list.h  list.hpp  name.h  phone.h
